--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -54,6 +54,7 @@
                     </LinearLayout>
 
                     <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/rivAlbLogo"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
                         android:src="@drawable/trikycamxuc"
@@ -62,6 +63,7 @@
                         app:riv_corner_radius="8dp"/>
 
                     <TextView
+                        android:id="@+id/tvAlbName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Tri Kỷ Cảm Xúc"
@@ -71,6 +73,7 @@
                         android:layout_marginTop="20dp"/>
 
                     <TextView
+                        android:id="@+id/tvAlbChannel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -95,6 +98,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/tvAlbDescription"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -117,7 +121,6 @@
                     android:paddingVertical="10dp">
 
                     <TextView
-                        android:id="@+id/alo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Tập"
