--- a/app/src/main/res/layout/bottomsheet_episode.xml
+++ b/app/src/main/res/layout/bottomsheet_episode.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/tvTimeRemaining"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="99:00"
+                android:text="--:--"
                 app:layout_constraintEnd_toEndOf="@+id/sbTimeBar"
                 app:layout_constraintTop_toBottomOf="@+id/sbTimeBar" />
 
