--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -175,7 +175,7 @@
                         app:layout_constraintEnd_toEndOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/tvAverage"
                         android:layout_width="110dp"
                         android:layout_height="90dp"
                         android:layout_marginTop="15dp"
@@ -194,21 +194,22 @@
                         android:textColor="@color/light_gray"
                         android:textSize="20dp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/textView3"
-                        app:layout_constraintStart_toStartOf="@+id/textView3"
-                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                        app:layout_constraintEnd_toEndOf="@+id/tvAverage"
+                        app:layout_constraintStart_toStartOf="@+id/tvAverage"
+                        app:layout_constraintTop_toBottomOf="@+id/tvAverage" />
 
 <!--                    5 star-->
                     <ProgressBar
                         android:id="@+id/pb5start"
-                        style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate="true"
+                        android:indeterminate = "true"
+                        android:max="100"
+                        style="?android:attr/progressBarStyleHorizontal"
                         android:indeterminateTint="@color/light_gray"
                         android:indeterminateTintMode="src_atop"
                         app:layout_constraintEnd_toEndOf="@+id/tvAllReview"
-                        app:layout_constraintTop_toTopOf="@+id/textView3" />
+                        app:layout_constraintTop_toTopOf="@+id/tvAverage" />
                     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="12dp"
@@ -392,7 +393,7 @@
                         android:textColor="@color/light_gray"
                         android:textSize="18dp"
                         app:layout_constraintEnd_toEndOf="@+id/tvAllReview"
-                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                        app:layout_constraintTop_toBottomOf="@+id/tvAverage" />
 
                     <View
                         android:id="@+id/view"
@@ -401,7 +402,7 @@
                         android:layout_marginTop="15dp"
                         android:background="@color/dark_gray"
                         app:layout_constraintEnd_toEndOf="@+id/tvTotalRating"
-                        app:layout_constraintStart_toStartOf="@+id/textView3"
+                        app:layout_constraintStart_toStartOf="@+id/tvAverage"
                         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
@@ -425,6 +426,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/textView2"
                         app:layout_constraintTop_toBottomOf="@+id/vpReview" />
+
+
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
