--- a/app/src/main/res/layout/admin_item_danh_muc.xml
+++ b/app/src/main/res/layout/admin_item_danh_muc.xml
@@ -3,32 +3,42 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="511dp"
-    android:layout_height="78dp"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:orientation="horizontal"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
     <TextView
         android:id="@+id/adminCateNameTV"
-        android:layout_width="275dp"
-        android:layout_height="33dp"
+        android:layout_width="241dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:padding="10dp"
+        android:text="TextView"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+       />
 
     <TextView
         android:id="@+id/cateEdit"
-        android:layout_width="64dp"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="47dp"
         android:layout_weight="1"
         android:drawableLeft="@drawable/ic_baseline_edit_24"
-        android:text="Sửa" />
+        android:text="Sửa"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        />
 
     <TextView
         android:id="@+id/cateDelete"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_weight="1"
+        android:drawableLeft="@drawable/ic_baseline_delete_24"
         android:text="Xóa"
-        android:drawableLeft="@drawable/ic_baseline_delete_24"/>
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        />
 </LinearLayout>
