--- a/app/src/main/res/layout/fragment_ranking_table.xml
+++ b/app/src/main/res/layout/fragment_ranking_table.xml
@@ -9,13 +9,11 @@
     android:background="#e9e8e9">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <LinearLayout
@@ -76,6 +74,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
 
@@ -98,7 +97,7 @@
                         android:text="Xem tất cả "
                         android:textAlignment="textEnd"
                         android:textColor="#7a31d6"
-                        android:textSize="17dp"
+                        android:textSize="20dp"
 
                         />
                 </LinearLayout>
@@ -106,7 +105,8 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="wrap_content"
-                    android:layout_height="290dp"
+
+                    android:layout_height="250dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="8dp" />
@@ -115,8 +115,8 @@
 
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_width="wrap_content"
+                android:layout_height="311dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -151,8 +151,8 @@
 
                 <ListView
                     android:id="@+id/lvRankingTap"
-                    android:layout_width="wrap_content"
-                    android:layout_height="178dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="252dp"
                     android:layout_marginTop="50dp"
 
                     />
@@ -160,7 +160,7 @@
             </FrameLayout>
 
         </LinearLayout>
-    </ScrollView>
+
 
 
 </LinearLayout>
