--- a/app/src/main/res/layout/item_episode_saved.xml
+++ b/app/src/main/res/layout/item_episode_saved.xml
@@ -12,7 +12,6 @@
         android:id="@+id/rivCover"
         android:layout_width="103dp"
         android:layout_height="103dp"
-        android:src="@drawable/trikycamxuc"
         app:riv_corner_radius="5dp" />
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
-            android:text="16 tháng 3"
+            android:text=""
             android:textSize="16dp"/>
 
         <TextView
@@ -33,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
-            android:text="#25 - người lớn cô đơn"
+            android:text=""
             android:maxLines="1"
             android:ellipsize="end"
             android:textSize="20dp"
@@ -45,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
-            android:text="Mình là Giang, mình là người lớn và mình thỉnh thoảng cũng cô đơn"
+            android:text=""
             android:maxLines="1"
             android:ellipsize="end"
             android:textSize="18dp"/>
