--- a/app/src/main/res/layout/list_opisode.xml
+++ b/app/src/main/res/layout/list_opisode.xml
@@ -37,6 +37,7 @@
 
 
     <ImageButton
+        android:id="@+id/ibPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_icon_circle"
